language/move-prover/tests/sources/functional/marketcap.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/marketcap.move:11:9 ───
    │
 11 │         invariant global<MarketCap>(0xA550C18).total_value == sum_of_coins;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/marketcap.move:44:6: deposit_invalid (entry)
    =     at tests/sources/functional/marketcap.move:45:18: deposit_invalid
    =         coin_ref = <redacted>,
    =         check = <redacted>,
    =         value = <redacted>
    =     at tests/sources/functional/marketcap.move:46:27: deposit_invalid
    =         coin_ref = <redacted>
    =     at tests/sources/functional/marketcap.move:44:6: deposit_invalid (exit)
